feature: Commit all except one and try to check it out